--- a/src/data_visualitation_mbg.ipynb
+++ b/src/data_visualitation_mbg.ipynb
@@ -174,6 +174,16 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b961f2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO Daten in pands umwandeln, in Datetime wandeln und einsehen woran die lücke liegt in 2022, log nah 0? "
+   ]
   }
  ],
  "metadata": {
